--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "express": "^4.15.3",
-    "socket.io": "^2.0.3"
+    "express": "^4.15.4",
+    "socket.io": "^2.0.3",
+    "socket.io-serial": "^0.4.0"
   }
 }
