--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
     "express": "^4.15.4",
-    "socket.io": "^2.0.3",
-    "socket.io-serial": "^0.4.0"
+    "node-ipc": "^9.1.1",
+    "socket.io": "^2.0.3"
   }
 }
